--- a/package.json
+++ b/package.json
@@ -13,6 +13,17 @@
         "axios": "^0.21",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "postcss": "^8.1.14",
+        "vue-loader": "^15.9.5",
+        "vue-template-compiler": "^2.6.12"
+    },
+    "dependencies": {
+        "@fortawesome/fontawesome-free": "^5.15.3",
+        "@inertiajs/inertia": "^0.9.0",
+        "@inertiajs/inertia-vue": "^0.6.0",
+        "@inertiajs/progress": "^0.2.5",
+        "k-progress": "^1.5.0",
+        "vue": "^2.6.12",
+        "vue-carousel": "^0.18.0"
     }
 }
