--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@inertiajs/progress": "^0.2.5",
         "k-progress": "^1.5.0",
         "vue": "^2.6.12",
-        "vue-carousel": "^0.18.0"
+        "vue-carousel": "^0.18.0",
+        "vue-graph": "^0.8.7"
     }
 }
