--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "k-progress": "^1.5.0",
         "vue": "^2.6.12",
         "vue-carousel": "^0.18.0",
-        "vue-graph": "^0.8.7"
+        "vue-graph": "^0.8.7",
+        "vuejs-dialog": "^1.4.2"
     }
 }
