--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@inertiajs/progress": "^0.2.5",
         "k-progress": "^1.5.0",
         "vue": "^2.6.12",
+        "vue-bot-ui": "^0.2.8",
         "vue-carousel": "^0.18.0",
         "vue-graph": "^0.8.7",
         "vuejs-dialog": "^1.4.2"
