--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "inertiajs/inertia-laravel": "^0.4.2",
         "laravel/framework": "^8.40",
+        "laravel/nexmo-notification-channel": "^2.5",
         "laravel/tinker": "^2.5"
     },
     "require-dev": {
